# grant-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: keepalive.yml
api/: api.py  schemas.py
config/: neural_eng.yaml  rl.yaml
grant_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ingestion/: celery_app.py  chunk.py  fetch_grants.py  injest.py  main.py  normalize.py  pinecone_db.py  retrieve.py  supabase.py  write_to_graph.py
retrieval/: agent.py  retrieve.py  system_msg.py
scripts/: keepalive.py
site/: .env.example  index.html  package-lock.json  package.json  vite.config.js
site/src/: App.jsx  IngestPanel.jsx  SourcesCard.jsx  api.js  index.css
